[gd_scene load_steps=7 format=4 uid="uid://cxos8f2sd3cab"]

[ext_resource type="Script" path="res://scenes/Ui/main_menu.gd" id="1_vv0fx"]
[ext_resource type="PackedScene" uid="uid://bsr284cx0o2lt" path="res://scenes/Ui/vignette.tscn" id="2_nvui3"]
[ext_resource type="Texture2D" uid="uid://bfttx1pko8lfa" path="res://assets/monsters/Wizard/Wizard.png" id="3_5ey6l"]
[ext_resource type="TileSet" uid="uid://sadrv0lwwkef" path="res://resources/tilesets/tileset_for_menu_screens.tres" id="3_p7emj"]
[ext_resource type="PackedScene" uid="uid://bio16yutlh531" path="res://scenes/Ui/animated_label.tscn" id="4_07ls2"]
[ext_resource type="PackedScene" uid="uid://pg6jic4xnaw1" path="res://scenes/Ui/sound_button.tscn" id="4_67p8a"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_vv0fx")

[node name="WizardAnimationPlayer" type="AnimationPlayer" parent="."]

[node name="BackTileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAABABUAAgAGAAEAAAADABUAAgAGAAEAAAAFABUAAgAGAAEAAAAHABUAAgAGAAEAAAAJABUAAgAGAAEAAAAKABUAAgAGAAEAAAALABUAAgAGAAEAAAAMABUAAgAGAAEAAAANABUAAgAGAAEAAAAOABUAAgAGAAEAAAAPABUAAgAGAAEAAAAQABUAAgAGAAEAAAARABUAAgAGAAEAAAASABUAAgAGAAEAAAATABUAAgAGAAEAAAAUABUAAgAGAAEAAAAVABUAAgAGAAEAAAAWABUAAgAGAAEAAAAXABUAAgAGAAEAAAAYABUAAgAGAAEAAAAZABUAAgAGAAEAAAAaABUAAgAGAAEAAAAbABUAAgAGAAEAAAAcABUAAgAGAAEAAAAdABUAAgAGAAEAAAAeABUAAgAGAAEAAAAfABUAAgAGAAEAAAAgABUAAgAGAAEAAAAhABUAAgAGAAEAAAAiABUAAgAGAAEAAAAjABUAAgAGAAEAAAAkABUAAgAGAAEAAAAlABUAAgAGAAEAAAAmABUAAgAGAAEAAAAnABUAAgAGAAEAAAAAABcAAgAGAAEAAAABABcAAgAGAAEAAAACABcAAgAGAAEAAAADABcAAgAGAAEAAAAEABcAAgAGAAEAAAAFABcAAgAGAAEAAAAGABcAAgAGAAEAAAAHABcAAgAGAAEAAAAIABcAAgAGAAEAAAAJABcAAgAGAAEAAAAKABcAAgAGAAEAAAALABcAAgAGAAEAAAAMABcAAgAGAAEAAAANABcAAgAGAAEAAAAOABcAAgAGAAEAAAAPABcAAgAGAAEAAAAQABcAAgAGAAEAAAARABcAAgAGAAEAAAASABcAAgAGAAEAAAATABcAAgAGAAEAAAAUABcAAgAGAAEAAAAVABcAAgAGAAEAAAAWABcAAgAGAAEAAAAXABcAAgAGAAEAAAAYABcAAgAGAAEAAAAZABcAAgAGAAEAAAAaABcAAgAGAAEAAAAbABcAAgAGAAEAAAAcABcAAgAGAAEAAAAdABcAAgAGAAEAAAAeABcAAgAGAAEAAAAfABcAAgAGAAEAAAAgABcAAgAGAAEAAAAhABcAAgAGAAEAAAAiABcAAgAGAAEAAAAjABcAAgAGAAEAAAAkABcAAgAGAAEAAAAlABcAAgAGAAEAAAAmABcAAgAGAAEAAAAnABcAAgAGAAEAAAABABMAAgAGAAEAAAACABMAAgAGAAEAAAADABMAAgAGAAEAAAAEABMAAgAGAAEAAAAFABMAAgAGAAEAAAAGABMAAgAGAAEAAAAHABMAAgAGAAEAAAAIABMAAgAGAAEAAAAJABMAAgAGAAEAAAAKABMAAgAGAAEAAAALABMAAgAGAAEAAAAMABMAAgAGAAEAAAANABMAAgAGAAEAAAAOABMAAgAGAAEAAAAPABMAAgAGAAEAAAAQABMAAgAGAAEAAAARABMAAgAGAAEAAAASABMAAgAGAAEAAAATABMAAgAGAAEAAAAUABMAAgAGAAEAAAAVABMAAgAGAAEAAAAWABMAAgAGAAEAAAAXABMAAgAGAAEAAAAYABMAAgAGAAEAAAAZABMAAgAGAAEAAAAaABMAAgAGAAEAAAAbABMAAgAGAAEAAAAcABMAAgAGAAEAAAAdABMAAgAGAAEAAAAeABMAAgAGAAEAAAAfABMAAgAGAAEAAAAgABMAAgAGAAEAAAAhABMAAgAGAAEAAAAiABMAAgAGAAEAAAAjABMAAgAGAAEAAAAkABMAAgAGAAEAAAAlABMAAgAGAAEAAAAmABMAAgAGAAEAAAAnABMAAgAGAAEAAAABAAUAAgAGAAEAAAABAAYAAgAGAAEAAAABAAcAAgAGAAEAAAABAAgAAgAGAAEAAAABAAkAAgAGAAEAAAABAAoAAgAGAAEAAAABAAsAAgAGAAEAAAABAAwAAgAGAAEAAAABAA0AAgAGAAEAAAABAA4AAgAGAAEAAAABAA8AAgAGAAEAAAABABAAAgAGAAEAAAABABEAAgAGAAEAAAABABIAAgAGAAEAAAACAAUAAgAGAAEAAAACAAYAAgAGAAEAAAACAAcAAgAGAAEAAAACAAgAAgAGAAEAAAACAAkAAgAGAAEAAAACAAoAAgAGAAEAAAACAAsAAgAGAAEAAAACAAwAAgAGAAEAAAACAA0AAgAGAAEAAAACAA4AAgAGAAEAAAACAA8AAgAGAAEAAAACABAAAgAGAAEAAAACABEAAgAGAAEAAAACABIAAgAGAAEAAAADAAUAAgAGAAEAAAADAAYAAgAGAAEAAAADAAcAAgAGAAEAAAADAAgAAgAGAAEAAAADAAkAAgAGAAEAAAADAAoAAgAGAAEAAAADAAsAAgAGAAEAAAADAAwAAgAGAAEAAAADAA0AAgAGAAEAAAADAA4AAgAGAAEAAAADAA8AAgAGAAEAAAADABAAAgAGAAEAAAADABEAAgAGAAEAAAADABIAAgAGAAEAAAAEAAUAAgAGAAEAAAAEAAYAAgAGAAEAAAAEAAcAAgAGAAEAAAAEAAgAAgAGAAEAAAAEAAkAAgAGAAEAAAAEAAoAAgAGAAEAAAAEAAsAAgAGAAEAAAAEAAwAAgAGAAEAAAAEAA0AAgAGAAEAAAAEAA4AAgAGAAEAAAAEAA8AAgAGAAEAAAAEABAAAgAGAAEAAAAEABEAAgAGAAEAAAAEABIAAgAGAAEAAAAFAAUAAgAGAAEAAAAFAAYAAgAGAAEAAAAFAAcAAgAGAAEAAAAFAAgAAgAGAAEAAAAFAAkAAgAGAAEAAAAFAAoAAgAGAAEAAAAFAAsAAgAGAAEAAAAFAAwAAgAGAAEAAAAFAA0AAgAGAAEAAAAFAA4AAgAGAAEAAAAFAA8AAgAGAAEAAAAFABAAAgAGAAEAAAAFABEAAgAGAAEAAAAFABIAAgAGAAEAAAAGAAUAAgAGAAEAAAAGAAYAAgAGAAEAAAAGAAcAAgAGAAEAAAAGAAgAAgAGAAEAAAAGAAkAAgAGAAEAAAAGAAoAAgAGAAEAAAAGAAsAAgAGAAEAAAAGAAwAAgAGAAEAAAAGAA0AAgAGAAEAAAAGAA4AAgAGAAEAAAAGAA8AAgAGAAEAAAAGABAAAgAGAAEAAAAGABEAAgAGAAEAAAAGABIAAgAGAAEAAAAHAAUAAgAGAAEAAAAHAAYAAgAGAAEAAAAHAAcAAgAGAAEAAAAHAAgAAgAGAAEAAAAHAAkAAgAGAAEAAAAHAAoAAgAGAAEAAAAHAAsAAgAGAAEAAAAHAAwAAgAGAAEAAAAHAA0AAgAGAAEAAAAHAA4AAgAGAAEAAAAHAA8AAgAGAAEAAAAHABAAAgAGAAEAAAAHABEAAgAGAAEAAAAHABIAAgAGAAEAAAAIAAUAAgAGAAEAAAAIAAYAAgAGAAEAAAAIAAcAAgAGAAEAAAAIAAgAAgAGAAEAAAAIAAkAAgAGAAEAAAAIAAoAAgAGAAEAAAAIAAsAAgAGAAEAAAAIAAwAAgAGAAEAAAAIAA0AAgAGAAEAAAAIAA4AAgAGAAEAAAAIAA8AAgAGAAEAAAAIABAAAgAGAAEAAAAIABEAAgAGAAEAAAAIABIAAgAGAAEAAAAJAAUAAgAGAAEAAAAJAAYAAgAGAAEAAAAJAAcAAgAGAAEAAAAJAAgAAgAGAAEAAAAJAAkAAgAGAAEAAAAJAAoAAgAGAAEAAAAJAAsAAgAGAAEAAAAJAAwAAgAGAAEAAAAJAA0AAgAGAAEAAAAJAA4AAgAGAAEAAAAJAA8AAgAGAAEAAAAJABAAAgAGAAEAAAAJABEAAgAGAAEAAAAJABIAAgAGAAEAAAAKAAUAAgAGAAEAAAAKAAYAAgAGAAEAAAAKAAcAAgAGAAEAAAAKAAgAAgAGAAEAAAAKAAkAAgAGAAEAAAAKAAoAAgAGAAEAAAAKAAsAAgAGAAEAAAAKAAwAAgAGAAEAAAAKAA0AAgAGAAEAAAAKAA4AAgAGAAEAAAAKAA8AAgAGAAEAAAAKABAAAgAGAAEAAAAKABEAAgAGAAEAAAAKABIAAgAGAAEAAAALAAUAAgAGAAEAAAALAAYAAgAGAAEAAAALAAcAAgAGAAEAAAALAAgAAgAGAAEAAAALAAkAAgAGAAEAAAALAAoAAgAGAAEAAAALAAsAAgAGAAEAAAALAAwAAgAGAAEAAAALAA0AAgAGAAEAAAALAA4AAgAGAAEAAAALAA8AAgAGAAEAAAALABAAAgAGAAEAAAALABEAAgAGAAEAAAALABIAAgAGAAEAAAAMAAUAAgAGAAEAAAAMAAYAAgAGAAEAAAAMAAcAAgAGAAEAAAAMAAgAAgAGAAEAAAAMAAkAAgAGAAEAAAAMAAoAAgAGAAEAAAAMAAsAAgAGAAEAAAAMAAwAAgAGAAEAAAAMAA0AAgAGAAEAAAAMAA4AAgAGAAEAAAAMAA8AAgAGAAEAAAAMABAAAgAGAAEAAAAMABEAAgAGAAEAAAAMABIAAgAGAAEAAAANAAUAAgAGAAEAAAANAAYAAgAGAAEAAAANAAcAAgAGAAEAAAANAAgAAgAGAAEAAAANAAkAAgAGAAEAAAANAAoAAgAGAAEAAAANAAsAAgAGAAEAAAANAAwAAgAGAAEAAAANAA0AAgAGAAEAAAANAA4AAgAGAAEAAAANAA8AAgAGAAEAAAANABAAAgAGAAEAAAANABEAAgAGAAEAAAANABIAAgAGAAEAAAAOAAUAAgAGAAEAAAAOAAYAAgAGAAEAAAAOAAcAAgAGAAEAAAAOAAgAAgAGAAEAAAAOAAkAAgAGAAEAAAAOAAoAAgAGAAEAAAAOAAsAAgAGAAEAAAAOAAwAAgAGAAEAAAAOAA0AAgAGAAEAAAAOAA4AAgAGAAEAAAAOAA8AAgAGAAEAAAAOABAAAgAGAAEAAAAOABEAAgAGAAEAAAAOABIAAgAGAAEAAAAPAAUAAgAGAAEAAAAPAAYAAgAGAAEAAAAPAAcAAgAGAAEAAAAPAAgAAgAGAAEAAAAPAAkAAgAGAAEAAAAPAAoAAgAGAAEAAAAPAAsAAgAGAAEAAAAPAAwAAgAGAAEAAAAPAA0AAgAGAAEAAAAPAA4AAgAGAAEAAAAPAA8AAgAGAAEAAAAPABAAAgAGAAEAAAAPABEAAgAGAAEAAAAPABIAAgAGAAEAAAAQAAUAAgAGAAEAAAAQAAYAAgAGAAEAAAAQAAcAAgAGAAEAAAAQAAgAAgAGAAEAAAAQAAkAAgAGAAEAAAAQAAoAAgAGAAEAAAAQAAsAAgAGAAEAAAAQAAwAAgAGAAEAAAAQAA0AAgAGAAEAAAAQAA4AAgAGAAEAAAAQAA8AAgAGAAEAAAAQABAAAgAGAAEAAAAQABEAAgAGAAEAAAAQABIAAgAGAAEAAAARAAUAAgAGAAEAAAARAAYAAgAGAAEAAAARAAcAAgAGAAEAAAARAAgAAgAGAAEAAAARAAkAAgAGAAEAAAARAAoAAgAGAAEAAAARAAsAAgAGAAEAAAARAAwAAgAGAAEAAAARAA0AAgAGAAEAAAARAA4AAgAGAAEAAAARAA8AAgAGAAEAAAARABAAAgAGAAEAAAARABEAAgAGAAEAAAARABIAAgAGAAEAAAASAAUAAgAGAAEAAAASAAYAAgAGAAEAAAASAAcAAgAGAAEAAAASAAgAAgAGAAEAAAASAAkAAgAGAAEAAAASAAoAAgAGAAEAAAASAAsAAgAGAAEAAAASAAwAAgAGAAEAAAASAA0AAgAGAAEAAAASAA4AAgAGAAEAAAASAA8AAgAGAAEAAAASABAAAgAGAAEAAAASABEAAgAGAAEAAAASABIAAgAGAAEAAAATAAUAAgAGAAEAAAATAAYAAgAGAAEAAAATAAcAAgAGAAEAAAATAAgAAgAGAAEAAAATAAkAAgAGAAEAAAATAAoAAgAGAAEAAAATAAsAAgAGAAEAAAATAAwAAgAGAAEAAAATAA0AAgAGAAEAAAATAA4AAgAGAAEAAAATAA8AAgAGAAEAAAATABAAAgAGAAEAAAATABEAAgAGAAEAAAATABIAAgAGAAEAAAAUAAUAAgAGAAEAAAAUAAYAAgAGAAEAAAAUAAcAAgAGAAEAAAAUAAgAAgAGAAEAAAAUAAkAAgAGAAEAAAAUAAoAAgAGAAEAAAAUAAsAAgAGAAEAAAAUAAwAAgAGAAEAAAAUAA0AAgAGAAEAAAAUAA4AAgAGAAEAAAAUAA8AAgAGAAEAAAAUABAAAgAGAAEAAAAUABEAAgAGAAEAAAAUABIAAgAGAAEAAAAVAAUAAgAGAAEAAAAVAAYAAgAGAAEAAAAVAAcAAgAGAAEAAAAVAAgAAgAGAAEAAAAVAAkAAgAGAAEAAAAVAAoAAgAGAAEAAAAVAAsAAgAGAAEAAAAVAAwAAgAGAAEAAAAVAA0AAgAGAAEAAAAVAA4AAgAGAAEAAAAVAA8AAgAGAAEAAAAVABAAAgAGAAEAAAAVABEAAgAGAAEAAAAVABIAAgAGAAEAAAAWAAUAAgAGAAEAAAAWAAYAAgAGAAEAAAAWAAcAAgAGAAEAAAAWAAgAAgAGAAEAAAAWAAkAAgAGAAEAAAAWAAoAAgAGAAEAAAAWAAsAAgAGAAEAAAAWAAwAAgAGAAEAAAAWAA0AAgAGAAEAAAAWAA4AAgAGAAEAAAAWAA8AAgAGAAEAAAAWABAAAgAGAAEAAAAWABEAAgAGAAEAAAAWABIAAgAGAAEAAAAXAAUAAgAGAAEAAAAXAAYAAgAGAAEAAAAXAAcAAgAGAAEAAAAXAAgAAgAGAAEAAAAXAAkAAgAGAAEAAAAXAAoAAgAGAAEAAAAXAAsAAgAGAAEAAAAXAAwAAgAGAAEAAAAXAA0AAgAGAAEAAAAXAA4AAgAGAAEAAAAXAA8AAgAGAAEAAAAXABAAAgAGAAEAAAAXABEAAgAGAAEAAAAXABIAAgAGAAEAAAAYAAUAAgAGAAEAAAAYAAYAAgAGAAEAAAAYAAcAAgAGAAEAAAAYAAgAAgAGAAEAAAAYAAkAAgAGAAEAAAAYAAoAAgAGAAEAAAAYAAsAAgAGAAEAAAAYAAwAAgAGAAEAAAAYAA0AAgAGAAEAAAAYAA4AAgAGAAEAAAAYAA8AAgAGAAEAAAAYABAAAgAGAAEAAAAYABEAAgAGAAEAAAAYABIAAgAGAAEAAAAZAAUAAgAGAAEAAAAZAAYAAgAGAAEAAAAZAAcAAgAGAAEAAAAZAAgAAgAGAAEAAAAZAAkAAgAGAAEAAAAZAAoAAgAGAAEAAAAZAAsAAgAGAAEAAAAZAAwAAgAGAAEAAAAZAA0AAgAGAAEAAAAZAA4AAgAGAAEAAAAZAA8AAgAGAAEAAAAZABAAAgAGAAEAAAAZABEAAgAGAAEAAAAZABIAAgAGAAEAAAAaAAUAAgAGAAEAAAAaAAYAAgAGAAEAAAAaAAcAAgAGAAEAAAAaAAgAAgAGAAEAAAAaAAkAAgAGAAEAAAAaAAoAAgAGAAEAAAAaAAsAAgAGAAEAAAAaAAwAAgAGAAEAAAAaAA0AAgAGAAEAAAAaAA4AAgAGAAEAAAAaAA8AAgAGAAEAAAAaABAAAgAGAAEAAAAaABEAAgAGAAEAAAAaABIAAgAGAAEAAAAbAAUAAgAGAAEAAAAbAAYAAgAGAAEAAAAbAAcAAgAGAAEAAAAbAAgAAgAGAAEAAAAbAAkAAgAGAAEAAAAbAAoAAgAGAAEAAAAbAAsAAgAGAAEAAAAbAAwAAgAGAAEAAAAbAA0AAgAGAAEAAAAbAA4AAgAGAAEAAAAbAA8AAgAGAAEAAAAbABAAAgAGAAEAAAAbABEAAgAGAAEAAAAbABIAAgAGAAEAAAAcAAUAAgAGAAEAAAAcAAYAAgAGAAEAAAAcAAcAAgAGAAEAAAAcAAgAAgAGAAEAAAAcAAkAAgAGAAEAAAAcAAoAAgAGAAEAAAAcAAsAAgAGAAEAAAAcAAwAAgAGAAEAAAAcAA0AAgAGAAEAAAAcAA4AAgAGAAEAAAAcAA8AAgAGAAEAAAAcABAAAgAGAAEAAAAcABEAAgAGAAEAAAAcABIAAgAGAAEAAAAdAAUAAgAGAAEAAAAdAAYAAgAGAAEAAAAdAAcAAgAGAAEAAAAdAAgAAgAGAAEAAAAdAAkAAgAGAAEAAAAdAAoAAgAGAAEAAAAdAAsAAgAGAAEAAAAdAAwAAgAGAAEAAAAdAA0AAgAGAAEAAAAdAA4AAgAGAAEAAAAdAA8AAgAGAAEAAAAdABAAAgAGAAEAAAAdABEAAgAGAAEAAAAdABIAAgAGAAEAAAAeAAUAAgAGAAEAAAAeAAYAAgAGAAEAAAAeAAcAAgAGAAEAAAAeAAgAAgAGAAEAAAAeAAkAAgAGAAEAAAAeAAoAAgAGAAEAAAAeAAsAAgAGAAEAAAAeAAwAAgAGAAEAAAAeAA0AAgAGAAEAAAAeAA4AAgAGAAEAAAAeAA8AAgAGAAEAAAAeABAAAgAGAAEAAAAeABEAAgAGAAEAAAAeABIAAgAGAAEAAAAfAAUAAgAGAAEAAAAfAAYAAgAGAAEAAAAfAAcAAgAGAAEAAAAfAAgAAgAGAAEAAAAfAAkAAgAGAAEAAAAfAAoAAgAGAAEAAAAfAAsAAgAGAAEAAAAfAAwAAgAGAAEAAAAfAA0AAgAGAAEAAAAfAA4AAgAGAAEAAAAfAA8AAgAGAAEAAAAfABAAAgAGAAEAAAAfABEAAgAGAAEAAAAfABIAAgAGAAEAAAAgAAUAAgAGAAEAAAAgAAYAAgAGAAEAAAAgAAcAAgAGAAEAAAAgAAgAAgAGAAEAAAAgAAkAAgAGAAEAAAAgAAoAAgAGAAEAAAAgAAsAAgAGAAEAAAAgAAwAAgAGAAEAAAAgAA0AAgAGAAEAAAAgAA4AAgAGAAEAAAAgAA8AAgAGAAEAAAAgABAAAgAGAAEAAAAgABEAAgAGAAEAAAAgABIAAgAGAAEAAAAhAAUAAgAGAAEAAAAhAAYAAgAGAAEAAAAhAAcAAgAGAAEAAAAhAAgAAgAGAAEAAAAhAAkAAgAGAAEAAAAhAAoAAgAGAAEAAAAhAAsAAgAGAAEAAAAhAAwAAgAGAAEAAAAhAA0AAgAGAAEAAAAhAA4AAgAGAAEAAAAhAA8AAgAGAAEAAAAhABAAAgAGAAEAAAAhABEAAgAGAAEAAAAhABIAAgAGAAEAAAAiAAUAAgAGAAEAAAAiAAYAAgAGAAEAAAAiAAcAAgAGAAEAAAAiAAgAAgAGAAEAAAAiAAkAAgAGAAEAAAAiAAoAAgAGAAEAAAAiAAsAAgAGAAEAAAAiAAwAAgAGAAEAAAAiAA0AAgAGAAEAAAAiAA4AAgAGAAEAAAAiAA8AAgAGAAEAAAAiABAAAgAGAAEAAAAiABEAAgAGAAEAAAAiABIAAgAGAAEAAAAjAAUAAgAGAAEAAAAjAAYAAgAGAAEAAAAjAAcAAgAGAAEAAAAjAAgAAgAGAAEAAAAjAAkAAgAGAAEAAAAjAAoAAgAGAAEAAAAjAAsAAgAGAAEAAAAjAAwAAgAGAAEAAAAjAA0AAgAGAAEAAAAjAA4AAgAGAAEAAAAjAA8AAgAGAAEAAAAjABAAAgAGAAEAAAAjABEAAgAGAAEAAAAjABIAAgAGAAEAAAAkAAUAAgAGAAEAAAAkAAYAAgAGAAEAAAAkAAcAAgAGAAEAAAAkAAgAAgAGAAEAAAAkAAkAAgAGAAEAAAAkAAoAAgAGAAEAAAAkAAsAAgAGAAEAAAAkAAwAAgAGAAEAAAAkAA0AAgAGAAEAAAAkAA4AAgAGAAEAAAAkAA8AAgAGAAEAAAAkABAAAgAGAAEAAAAkABEAAgAGAAEAAAAkABIAAgAGAAEAAAAlAAUAAgAGAAEAAAAlAAYAAgAGAAEAAAAlAAcAAgAGAAEAAAAlAAgAAgAGAAEAAAAlAAkAAgAGAAEAAAAlAAoAAgAGAAEAAAAlAAsAAgAGAAEAAAAlAAwAAgAGAAEAAAAlAA0AAgAGAAEAAAAlAA4AAgAGAAEAAAAlAA8AAgAGAAEAAAAlABAAAgAGAAEAAAAlABEAAgAGAAEAAAAlABIAAgAGAAEAAAAmAAUAAgAGAAEAAAAmAAYAAgAGAAEAAAAmAAcAAgAGAAEAAAAmAAgAAgAGAAEAAAAmAAkAAgAGAAEAAAAmAAoAAgAGAAEAAAAmAAsAAgAGAAEAAAAmAAwAAgAGAAEAAAAmAA0AAgAGAAEAAAAmAA4AAgAGAAEAAAAmAA8AAgAGAAEAAAAmABAAAgAGAAEAAAAmABEAAgAGAAEAAAAmABIAAgAGAAEAAAAnAAUAAgAGAAEAAAAnAAYAAgAGAAEAAAAnAAcAAgAGAAEAAAAnAAgAAgAGAAEAAAAnAAkAAgAGAAEAAAAnAAoAAgAGAAEAAAAnAAsAAgAGAAEAAAAnAAwAAgAGAAEAAAAnAA0AAgAGAAEAAAAnAA4AAgAGAAEAAAAnAA8AAgAGAAEAAAAnABAAAgAGAAEAAAAnABEAAgAGAAEAAAAnABIAAgAGAAEAAAAAAA0AAgAGAAEAAAAAAA4AAgAGAAEAAAAAAA8AAgAGAAEAAAAAABAAAgAGAAEAAAAAABEAAgAGAAEAAAAAABIAAgAGAAEAAAAAABQAAgAGAAEAAAAAABUAAgAGAAEAAAAAAAwAAgAGAAEAAAAAAAsAAgAGAAEAAAAAAAoAAgAGAAEAAAAAAAkAAgAGAAEAAAAAAAgAAgAGAAEAAAAAAAcAAgAGAAEAAAAAAAYAAgAGAAEAAAAAAAUAAgAGAAEAAAAAAAAAAgAEAAAAAAACAAAAAgAEAAAAAAACAAEAAgAEAAAAAAADAAAAAgAEAAAAAAADAAEAAgAEAAAAAAAEAAAAAgAEAAAAAAAEAAEAAgAEAAAAAAAFAAAAAgAEAAAAAAAFAAEAAgAEAAAAAAAGAAAAAgAEAAAAAAAGAAEAAgAEAAAAAAAHAAAAAgAEAAAAAAAHAAEAAgAEAAAAAAAIAAAAAgAEAAAAAAAIAAEAAgAEAAAAAAAJAAAAAgAEAAAAAAAJAAEAAgAEAAAAAAAKAAAAAgAEAAAAAAAKAAEAAgAEAAAAAAALAAAAAgAEAAAAAAALAAEAAgAEAAAAAAAMAAAAAgAEAAAAAAAMAAEAAgAEAAAAAAANAAAAAgAEAAAAAAANAAEAAgAEAAAAAAAOAAAAAgAEAAAAAAAOAAEAAgAEAAAAAAAYAAAAAgAEAAAAAAAYAAEAAgAEAAAAAAAZAAAAAgAEAAAAAAAZAAEAAgAEAAAAAAAaAAAAAgAEAAAAAAAaAAEAAgAEAAAAAAAbAAAAAgAEAAAAAAAbAAEAAgAEAAAAAAAcAAAAAgAEAAAAAAAcAAEAAgAEAAAAAAAdAAAAAgAEAAAAAAAdAAEAAgAEAAAAAAAeAAAAAgAEAAAAAAAeAAEAAgAEAAAAAAAfAAAAAgAEAAAAAAAfAAEAAgAEAAAAAAAgAAAAAgAEAAAAAAAgAAEAAgAEAAAAAAAhAAAAAgAEAAAAAAAhAAEAAgAEAAAAAAAiAAAAAgAEAAAAAAAiAAEAAgAEAAAAAAAjAAAAAgAEAAAAAAAjAAEAAgAEAAAAAAAlAAAAAgAEAAAAAAAlAAEAAgAEAAAAAAAmAAAAAgAEAAAAAAAmAAEAAgAEAAAAAAAnAAAAAgAEAAAAAAAnAAEAAgAEAAAAAAAAAAEAAgAEAAAAAAAAAAIAAgAEAAAAAAABAAIAAgAEAAAAAAACAAIAAgAEAAAAAAADAAIAAgAEAAAAAAAEAAIAAgAEAAAAAAAFAAIAAgAEAAAAAAAGAAIAAgAEAAAAAAAHAAIAAgAEAAAAAAAIAAIAAgAEAAAAAAAJAAIAAgAEAAAAAAAKAAIAAgAEAAAAAAALAAIAAgAEAAAAAAAMAAIAAgAEAAAAAAANAAIAAgAEAAAAAAAOAAIAAgAEAAAAAAAYAAIAAgAEAAAAAAAZAAIAAgAEAAAAAAAaAAIAAgAEAAAAAAAbAAIAAgAEAAAAAAAcAAIAAgAEAAAAAAAdAAIAAgAEAAAAAAAeAAIAAgAEAAAAAAAfAAIAAgAEAAAAAAAgAAIAAgAEAAAAAAAhAAIAAgAEAAAAAAAiAAIAAgAEAAAAAAAjAAIAAgAEAAAAAAAkAAIAAgAEAAAAAAAlAAIAAgAEAAAAAAAnAAIAAgAEAAAAAAAPAAAAAgAEAAAAAAAPAAEAAgAEAAAAAAAQAAAAAgAEAAAAAAAQAAEAAgAEAAAAAAARAAAAAgAEAAAAAAARAAEAAgAEAAAAAAASAAAAAgAEAAAAAAASAAEAAgAEAAAAAAATAAAAAgAEAAAAAAATAAEAAgAEAAAAAAAUAAAAAgAEAAAAAAAUAAEAAgAEAAAAAAAVAAAAAgAEAAAAAAAVAAEAAgAEAAAAAAAWAAAAAgAEAAAAAAAWAAEAAgAEAAAAAAAXAAAAAgAEAAAAAAAXAAEAAgAEAAAAAAAAAAMAAgAEAAAAAAABAAMAAgAEAAAAAAACAAMAAgAEAAAAAAADAAMAAgAEAAAAAAAEAAMAAgAEAAAAAAAFAAMAAgAEAAAAAAAGAAMAAgAEAAAAAAAHAAMAAgAEAAAAAAAIAAMAAgAEAAAAAAAJAAMAAgAEAAAAAAAKAAMAAgAEAAAAAAALAAMAAgAEAAAAAAAMAAMAAgAEAAAAAAANAAMAAgAEAAAAAAAOAAMAAgAEAAAAAAAPAAMAAgAEAAAAAAAQAAMAAgAEAAAAAAARAAMAAgAEAAAAAAASAAMAAgAEAAAAAAATAAMAAgAEAAAAAAAUAAMAAgAEAAAAAAAVAAMAAgAEAAAAAAAWAAMAAgAEAAAAAAAXAAMAAgAEAAAAAAAYAAMAAgAEAAAAAAAZAAMAAgAEAAAAAAAaAAMAAgAEAAAAAAAbAAMAAgAEAAAAAAAcAAMAAgAEAAAAAAAdAAMAAgAEAAAAAAAfAAMAAgAEAAAAAAAgAAMAAgAEAAAAAAAhAAMAAgAEAAAAAAAiAAMAAgAEAAAAAAAjAAMAAgAEAAAAAAAkAAMAAgAEAAAAAAAlAAMAAgAEAAAAAAAmAAMAAgAEAAAAAAAnAAMAAgAEAAAAAAA=")
tile_set = ExtResource("3_p7emj")

[node name="Wizard" type="Sprite2D" parent="."]
position = Vector2(309, 48)
scale = Vector2(1.90625, 1.86125)
texture = ExtResource("3_5ey6l")

[node name="FrontTileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAASAAMAAgAGAAQAAAAUAAMAAgAGAAQAAAASAAUAAgAGAAEAAAAUAAUAAgAGAAEAAAAAAAMAAgAGAAQAAAACAAMAAgAGAAQAAAAEAAMAAgAGAAQAAAAGAAMAAgAGAAQAAAAIAAMAAgAGAAQAAAAKAAMAAgAGAAQAAAAMAAMAAgAGAAQAAAAOAAMAAgAGAAQAAAAQAAMAAgAGAAQAAAAWAAMAAgAGAAQAAAAYAAMAAgAGAAQAAAAaAAMAAgAGAAQAAAAcAAMAAgAGAAQAAAAeAAMAAgAGAAQAAAAgAAMAAgAGAAQAAAAiAAMAAgAGAAQAAAAkAAMAAgAGAAQAAAAmAAMAAgAGAAQAAAAoAAMAAgAGAAQAAAA=")
tile_set = ExtResource("3_p7emj")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 12.0
offset_right = 2.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="AnimatedLabel" parent="MarginContainer/VBoxContainer" instance=ExtResource("4_07ls2")]
layout_mode = 2
theme_override_constants/shadow_outline_size = 13
text = "Ratsbane"
displayed_text = "Ratsbane"

[node name="QuickPlayButton" parent="MarginContainer/VBoxContainer" instance=ExtResource("4_67p8a")]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 28)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "PLAY_BUTTON"

[node name="UpgradesButton" parent="MarginContainer/VBoxContainer" instance=ExtResource("4_67p8a")]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 28)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "UPGRADES_BUTTON"

[node name="AchievementsButton" parent="MarginContainer/VBoxContainer" instance=ExtResource("4_67p8a")]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 28)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "ACHIEVEMENTS_BUTTON"

[node name="OptionsButton" parent="MarginContainer/VBoxContainer" instance=ExtResource("4_67p8a")]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 28)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "OPTIONS_BUTTON"

[node name="QuitButton" parent="MarginContainer/VBoxContainer" instance=ExtResource("4_67p8a")]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 28)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "QUIT_BUTTON"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="BuildLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_constants/outline_size = 8
text = "Vx.x.x.x-beta"
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_constants/outline_size = 8
text = "TIME_PLAYED_LABEL"
horizontal_alignment = 1

[node name="PlaytimeLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_constants/outline_size = 8
horizontal_alignment = 1

[node name="PlayButton" parent="MarginContainer/HBoxContainer" instance=ExtResource("4_67p8a")]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(180, 28)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "PLAY_BUTTON"

[node name="FeedbackButton" parent="MarginContainer/HBoxContainer" instance=ExtResource("4_67p8a")]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 28)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
text = "FEEDBACK_BUTTON_LABEL"

[node name="Vignette" parent="." instance=ExtResource("2_nvui3")]
layer = 2
